# pepperpy-poetry

./: 404.html  CHANGELOG.md  README.md  dagger.json  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  shared-config.toml
.github/workflows/: release.yml
api/: index.html
api/config/: index.html
api/plugin/: index.html
contributing/development/: index.html
contributing/guide/: index.html
docs/: conf.py  index.md  index.rst
docs/api/: config.md  index.md  plugin.md
docs/getting-started/: quick-start.md
docs/user-guide/: examples.md
examples/: pepperpy.toml
getting-started/installation/: index.html
getting-started/quick-start/: index.html
pepperpy_poetry/: commands.py  config.py  plugin.py
scripts/: generate_logo.py
search/: search_index.json
tests/: test_config.py
user-guide/configuration/: index.html
user-guide/examples/: index.html
