[tool.poetry]
name = "pepperpy-poetry"
version = "0.1.0"
description = "A Poetry plugin for shared configuration management across multiple projects in the pepperpy ecosystem"
authors = ["Felipe Pimentel <felipe.pimentel@gmail.com>"]
maintainers = ["Felipe Pimentel <felipe.pimentel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/felipepimentel/pepperpy-poetry"
repository = "https://github.com/felipepimentel/pepperpy-poetry"
documentation = "https://felipepimentel.github.io/pepperpy-poetry"
keywords = ["poetry", "plugin", "configuration", "management", "pepperpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
packages = [{ include = "pepperpy_poetry" }]

[tool.poetry.dependencies]
python = "^3.9"
poetry = ">=2.0.1,<3.0.0"
toml = ">=0.10.2,<0.11.0"
cleo = ">=2.1.0,<3.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
mkdocstrings = { extras = ["python"], version = "^0.27.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
pepperpy = "pepperpy_poetry.plugin:SharedConfigPlugin"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
